<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CamDiary</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_replay">Replay</string>
    <string name="button_delete">Delete</string>
    <string name="button_changetowrite">Write</string>
    <string name="button_recordstart">Start !</string>
    <string name="login_label_username">Name</string>
    <string name="login_label_password">Password</string>
    <string name="login_label_signin">Log in</string>
    <string name="login_register_link">Name</string>
    <string name="ok">OK</string>
    <string name="signin_user_email">Email</string>
    
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="log_out">Log out</string>
  

</resources>
