<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout  
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:orientation="vertical"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"  
    android:background="@drawable/background">  
    <!-- padding 内边距   layout_margin 外边距  
        android:layout_alignParentTop 布局的位置是否处于顶部 -->  
          
    <RelativeLayout   
        android:id="@+id/login_div"  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:padding="15dip"          
        android:layout_margin="15dip"   
        android:background="@drawable/background_login" >  
        <!-- 账号 -->  
        <TextView   
            android:id="@+id/login_user_input"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_alignParentTop="true"  
            android:layout_marginTop="5dp"  
            android:text="@string/login_label_username"  />  
        <EditText   
            android:id="@+id/username_edit"  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content"  
            android:hint="@string/login_label_username"  
            android:layout_below="@id/login_user_input"  
            android:singleLine="true"  
            android:inputType="text"/>  
        <!-- 密码 text -->  
        <TextView   
            android:id="@+id/login_password_input"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/username_edit"  
            android:layout_marginTop="3dp"  
            android:text="@string/login_label_password"  />  
        <EditText   
            android:id="@+id/password_edit"  
            android:layout_width="fill_parent"  
            android:layout_height="wrap_content" 
            android:hint="@string/login_label_password"  
            android:layout_below="@id/login_password_input"  
            android:password="true"  
            android:singleLine="true"  
            android:inputType="textPassword" />  
        <!-- 登录button -->  
        <CheckBox  
            android:id="@+id/autologin"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/password_edit"  
            android:text="Stay Log in"  
            android:textColor="#000000" /> 
        <Button   
            android:id="@+id/login_button"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/password_edit"  
            android:layout_alignRight="@id/password_edit"  
            android:text="@string/login_label_signin"   /> 
        <Button   
            android:id="@+id/signin_button"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/login_button"   
            android:layout_alignRight="@id/password_edit"  
            android:text="Sign In"   />  
    </RelativeLayout>  
    
</LinearLayout>  